@@ -96,6 +96,10 @@ PlotLine * Plugin::getIndicatorLine (int)
   return 0;
 }
 
+void Plugin::clearOutput ()
+{
+}
+
 //**********************************************************
 //************** quote plugin interface ********************
 //**********************************************************
